# parapartition

./: README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: syntax-and-unittest.yml
parapartition/: __init__.py  file_format.py  file_type.py  partition.py
tests/: test_file_format.py  test_file_type.py  test_partition.py
tests/testdata/: html_with_empty_p.html  plain_with_empty_lines.txt  tei_with_complex_elements.xml  tei_with_empty_p.xml  tei_with_p_in_header.xml
tests/testdata/html/: html2  html3.txt
tests/testdata/raw/: raw.txt  raw2
tests/testdata/xml/: tei5.txt  xml1.xml  xml8.html
