[metadata]
name = parapartition
author = luise.sj.koehler@gmail.com
version = 0.0.2

[options]
install_requires =
  lxml>=4.0,<=5

packages = find:

[options.packages.find]
exclude =
  tests

[mypy]
ignore_missing_imports=True

[flake8]
exclude =
  site-packages
filename =
  *.py
max_line_length=127
per-file-ignores =
    parapartition/__init__.py:F401

[isort]
profile=black
